// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multistep component projector view inactive renders 1`] = `
<Multistep
  data={
    Object {
      "play": Object {
        "cues": Array [
          "",
        ],
        "instructions": "",
        "prompt": "Label each group of words as a fragment or a complete sentence.",
        "stepLabels": Array [
          "Even though he had practiced every night and he was a talented singer.",
          "After finding out about the secret spot and walking three miles to get there.",
          "Before he went home, he took photographs of all his friends and said goodbye.",
        ],
      },
      "teach": Object {
        "script": Array [
          Object {
            "data": Object {
              "body": "<p><strong>Say:</strong> CHANGE ME</p>",
              "heading": "STEP HTML HEADING",
            },
            "type": "STEP-HTML",
          },
          Object {
            "type": "T-REVIEW",
          },
        ],
        "title": "MULTISTEP SLIDE TITLE",
      },
    }
  }
  mode={null}
  projector={true}
  selected_submission_order={null}
  selected_submissions={null}
  studentCount={2}
  submissions={null}
>
  <div
    className="multistep student-slide-wrapper projector "
  >
    <div
      className="all-but-submitted-bar"
    >
      <ProjectorHeader
        studentCount={2}
        submissions={null}
      >
        <div
          className="projector-header-section"
        >
          <div
            className="students-type-tag tag"
          >
            <img
              alt="Laptop Icon"
              src="undefined/images/icons/laptop-glyph.svg"
            />
            <span>
              Students type response
            </span>
          </div>
          <p
            className="answered-count"
          >
            0 of 2 have responded
          </p>
        </div>
      </ProjectorHeader>
      <PromptSection
        mode={null}
        promptElement={
          <SentenceFragments
            prompt="Label each group of words as a fragment or a complete sentence."
          />
        }
      >
        <SentenceFragments
          prompt="Label each group of words as a fragment or a complete sentence."
        >
          <div
            className="draft-js sentence-fragments prevent-selection"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Label each group of words as a fragment or a complete sentence.",
              }
            }
          />
        </SentenceFragments>
      </PromptSection>
      <div
        className="list-blanks"
      >
        <div
          className="list-component first"
          key="Even though he had practiced every night and he was a talented singer."
        >
          <span
            className="step-label"
          >
            Even though he had practiced every night and he was a talented singer.
          </span>
          <RenderTextEditor
            disabled={true}
            editorIndex="Even though he had practiced every night and he was a talented singer."
            handleChange={[Function]}
            placeholder="Type your response here"
            value="Students type responses here"
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth disabled-editor"
              disabled={true}
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value="Students type responses here"
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth disabled-editor"
                disabled={true}
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value="Students type responses here"
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
        <div
          className="list-component "
          key="After finding out about the secret spot and walking three miles to get there."
        >
          <span
            className="step-label"
          >
            After finding out about the secret spot and walking three miles to get there.
          </span>
          <RenderTextEditor
            disabled={true}
            editorIndex="After finding out about the secret spot and walking three miles to get there."
            handleChange={[Function]}
            placeholder="Type your response here"
            value="Students type responses here"
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth disabled-editor"
              disabled={true}
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value="Students type responses here"
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth disabled-editor"
                disabled={true}
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value="Students type responses here"
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
        <div
          className="list-component "
          key="Before he went home, he took photographs of all his friends and said goodbye."
        >
          <span
            className="step-label"
          >
            Before he went home, he took photographs of all his friends and said goodbye.
          </span>
          <RenderTextEditor
            disabled={true}
            editorIndex="Before he went home, he took photographs of all his friends and said goodbye."
            handleChange={[Function]}
            placeholder="Type your response here"
            value="Students type responses here"
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth disabled-editor"
              disabled={true}
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value="Students type responses here"
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth disabled-editor"
                disabled={true}
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value="Students type responses here"
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
      </div>
      <SubmitButton
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="question-button-group"
        >
          <button
            className="quill-button primary contained large focus-on-light disabled"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Submit
          </button>
        </div>
      </SubmitButton>
    </div>
  </div>
</Multistep>
`;

exports[`Multistep component projector view when an answer is being displayed renders 1`] = `
<Multistep
  data={
    Object {
      "play": Object {
        "cues": Array [
          "",
        ],
        "instructions": "",
        "prompt": "Label each group of words as a fragment or a complete sentence.",
        "stepLabels": Array [
          "Even though he had practiced every night and he was a talented singer.",
          "After finding out about the secret spot and walking three miles to get there.",
          "Before he went home, he took photographs of all his friends and said goodbye.",
        ],
      },
      "teach": Object {
        "script": Array [
          Object {
            "data": Object {
              "body": "<p><strong>Say:</strong> CHANGE ME</p>",
              "heading": "STEP HTML HEADING",
            },
            "type": "STEP-HTML",
          },
          Object {
            "type": "T-REVIEW",
          },
        ],
        "title": "MULTISTEP SLIDE TITLE",
      },
    }
  }
  projector={true}
  selected_submission_order={
    Array [
      "student#Before he went home, he took photographs of all his friends and said goodbye.",
      "student#After finding out about the secret spot and walking three miles to get there.",
      "student#Even though he had practiced every night and he was a talented singer.",
    ]
  }
  selected_submissions={
    Object {
      "student#After finding out about the secret spot and walking three miles to get there.": true,
      "student#Before he went home, he took photographs of all his friends and said goodbye.": true,
      "student#Even though he had practiced every night and he was a talented singer.": true,
    }
  }
  studentCount={2}
  submissions={
    Object {
      "student": Object {
        "data": Object {
          "1": "",
          "After finding out about the secret spot and walking three miles to get there.": "Fragment",
          "Before he went home, he took photographs of all his friends and said goodbye.": "Complete sentence",
          "Even though he had practiced every night and he was a talented singer.": "Fragment",
        },
        "timestamp": "2020-06-25T15:12:30.233Z",
      },
    }
  }
>
  <div
    className="multistep student-slide-wrapper projector "
  >
    <div
      className="all-but-submitted-bar"
    >
      <ProjectorHeader
        studentCount={2}
        submissions={
          Object {
            "student": Object {
              "data": Object {
                "1": "",
                "After finding out about the secret spot and walking three miles to get there.": "Fragment",
                "Before he went home, he took photographs of all his friends and said goodbye.": "Complete sentence",
                "Even though he had practiced every night and he was a talented singer.": "Fragment",
              },
              "timestamp": "2020-06-25T15:12:30.233Z",
            },
          }
        }
      >
        <div
          className="projector-header-section"
        >
          <div
            className="students-type-tag tag"
          >
            <img
              alt="Laptop Icon"
              src="undefined/images/icons/laptop-glyph.svg"
            />
            <span>
              Students type response
            </span>
          </div>
          <p
            className="answered-count"
          >
            1 of 2 have responded
          </p>
        </div>
      </ProjectorHeader>
      <PromptSection
        promptElement={
          <SentenceFragments
            prompt="Label each group of words as a fragment or a complete sentence."
          />
        }
      >
        <SentenceFragments
          prompt="Label each group of words as a fragment or a complete sentence."
        >
          <div
            className="draft-js sentence-fragments prevent-selection"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Label each group of words as a fragment or a complete sentence.",
              }
            }
          />
        </SentenceFragments>
      </PromptSection>
      <div
        className="list-blanks"
      >
        <div
          className="list-component first"
          key="Even though he had practiced every night and he was a talented singer."
        >
          <span
            className="step-label"
          >
            Even though he had practiced every night and he was a talented singer.
          </span>
          <RenderTextEditor
            disabled={true}
            editorIndex="Even though he had practiced every night and he was a talented singer."
            handleChange={[Function]}
            placeholder="Type your response here"
            value="Students type responses here"
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth disabled-editor"
              disabled={true}
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value="Students type responses here"
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth disabled-editor"
                disabled={true}
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value="Students type responses here"
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
        <div
          className="list-component "
          key="After finding out about the secret spot and walking three miles to get there."
        >
          <span
            className="step-label"
          >
            After finding out about the secret spot and walking three miles to get there.
          </span>
          <RenderTextEditor
            disabled={true}
            editorIndex="After finding out about the secret spot and walking three miles to get there."
            handleChange={[Function]}
            placeholder="Type your response here"
            value="Students type responses here"
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth disabled-editor"
              disabled={true}
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value="Students type responses here"
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth disabled-editor"
                disabled={true}
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value="Students type responses here"
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
        <div
          className="list-component "
          key="Before he went home, he took photographs of all his friends and said goodbye."
        >
          <span
            className="step-label"
          >
            Before he went home, he took photographs of all his friends and said goodbye.
          </span>
          <RenderTextEditor
            disabled={true}
            editorIndex="Before he went home, he took photographs of all his friends and said goodbye."
            handleChange={[Function]}
            placeholder="Type your response here"
            value="Students type responses here"
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth disabled-editor"
              disabled={true}
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value="Students type responses here"
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth disabled-editor"
                disabled={true}
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value="Students type responses here"
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
      </div>
      <SubmitButton
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="question-button-group"
        >
          <button
            className="quill-button primary contained large focus-on-light disabled"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Submit
          </button>
        </div>
      </SubmitButton>
    </div>
  </div>
</Multistep>
`;

exports[`Multistep component student view inactive renders 1`] = `
<Multistep
  data={
    Object {
      "play": Object {
        "cues": Array [
          "",
        ],
        "instructions": "",
        "prompt": "Label each group of words as a fragment or a complete sentence.",
        "stepLabels": Array [
          "Even though he had practiced every night and he was a talented singer.",
          "After finding out about the secret spot and walking three miles to get there.",
          "Before he went home, he took photographs of all his friends and said goodbye.",
        ],
      },
      "teach": Object {
        "script": Array [
          Object {
            "data": Object {
              "body": "<p><strong>Say:</strong> CHANGE ME</p>",
              "heading": "STEP HTML HEADING",
            },
            "type": "STEP-HTML",
          },
          Object {
            "type": "T-REVIEW",
          },
        ],
        "title": "MULTISTEP SLIDE TITLE",
      },
    }
  }
  mode={null}
  selected_submission_order={null}
  selected_submissions={null}
  studentCount={2}
  submissions={null}
>
  <div
    className="multistep student-slide-wrapper "
  >
    <div
      className="all-but-submitted-bar"
    >
      <PromptSection
        mode={null}
        promptElement={
          <SentenceFragments
            prompt="Label each group of words as a fragment or a complete sentence."
          />
        }
      >
        <SentenceFragments
          prompt="Label each group of words as a fragment or a complete sentence."
        >
          <div
            className="draft-js sentence-fragments prevent-selection"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Label each group of words as a fragment or a complete sentence.",
              }
            }
          />
        </SentenceFragments>
      </PromptSection>
      <div
        className="list-blanks"
      >
        <div
          className="list-component first"
          key="Even though he had practiced every night and he was a talented singer."
        >
          <span
            className="step-label"
          >
            Even though he had practiced every night and he was a talented singer.
          </span>
          <RenderTextEditor
            editorIndex="Even though he had practiced every night and he was a talented singer."
            handleChange={[Function]}
            placeholder="Type your response here"
            value=""
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth null"
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value=""
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth null"
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value=""
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
        <div
          className="list-component "
          key="After finding out about the secret spot and walking three miles to get there."
        >
          <span
            className="step-label"
          >
            After finding out about the secret spot and walking three miles to get there.
          </span>
          <RenderTextEditor
            editorIndex="After finding out about the secret spot and walking three miles to get there."
            handleChange={[Function]}
            placeholder="Type your response here"
            value=""
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth null"
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value=""
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth null"
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value=""
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
        <div
          className="list-component "
          key="Before he went home, he took photographs of all his friends and said goodbye."
        >
          <span
            className="step-label"
          >
            Before he went home, he took photographs of all his friends and said goodbye.
          </span>
          <RenderTextEditor
            editorIndex="Before he went home, he took photographs of all his friends and said goodbye."
            handleChange={[Function]}
            placeholder="Type your response here"
            value=""
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth null"
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value=""
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth null"
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value=""
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
      </div>
      <SubmitButton
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="question-button-group"
        >
          <button
            className="quill-button primary contained large focus-on-light disabled"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Submit
          </button>
        </div>
      </SubmitButton>
    </div>
  </div>
</Multistep>
`;

exports[`Multistep component student view when an answer is being displayed renders 1`] = `
<Multistep
  data={
    Object {
      "play": Object {
        "cues": Array [
          "",
        ],
        "instructions": "",
        "prompt": "Label each group of words as a fragment or a complete sentence.",
        "stepLabels": Array [
          "Even though he had practiced every night and he was a talented singer.",
          "After finding out about the secret spot and walking three miles to get there.",
          "Before he went home, he took photographs of all his friends and said goodbye.",
        ],
      },
      "teach": Object {
        "script": Array [
          Object {
            "data": Object {
              "body": "<p><strong>Say:</strong> CHANGE ME</p>",
              "heading": "STEP HTML HEADING",
            },
            "type": "STEP-HTML",
          },
          Object {
            "type": "T-REVIEW",
          },
        ],
        "title": "MULTISTEP SLIDE TITLE",
      },
    }
  }
  selected_submission_order={
    Array [
      "student#Before he went home, he took photographs of all his friends and said goodbye.",
      "student#After finding out about the secret spot and walking three miles to get there.",
      "student#Even though he had practiced every night and he was a talented singer.",
    ]
  }
  selected_submissions={
    Object {
      "student#After finding out about the secret spot and walking three miles to get there.": true,
      "student#Before he went home, he took photographs of all his friends and said goodbye.": true,
      "student#Even though he had practiced every night and he was a talented singer.": true,
    }
  }
  studentCount={2}
  submissions={
    Object {
      "student": Object {
        "data": Object {
          "1": "",
          "After finding out about the secret spot and walking three miles to get there.": "Fragment",
          "Before he went home, he took photographs of all his friends and said goodbye.": "Complete sentence",
          "Even though he had practiced every night and he was a talented singer.": "Fragment",
        },
        "timestamp": "2020-06-25T15:12:30.233Z",
      },
    }
  }
>
  <div
    className="multistep student-slide-wrapper "
  >
    <div
      className="all-but-submitted-bar"
    >
      <PromptSection
        promptElement={
          <SentenceFragments
            prompt="Label each group of words as a fragment or a complete sentence."
          />
        }
      >
        <SentenceFragments
          prompt="Label each group of words as a fragment or a complete sentence."
        >
          <div
            className="draft-js sentence-fragments prevent-selection"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Label each group of words as a fragment or a complete sentence.",
              }
            }
          />
        </SentenceFragments>
      </PromptSection>
      <div
        className="list-blanks"
      >
        <div
          className="list-component first"
          key="Even though he had practiced every night and he was a talented singer."
        >
          <span
            className="step-label"
          >
            Even though he had practiced every night and he was a talented singer.
          </span>
          <RenderTextEditor
            editorIndex="Even though he had practiced every night and he was a talented singer."
            handleChange={[Function]}
            placeholder="Type your response here"
            value=""
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth null"
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value=""
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth null"
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value=""
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
        <div
          className="list-component "
          key="After finding out about the secret spot and walking three miles to get there."
        >
          <span
            className="step-label"
          >
            After finding out about the secret spot and walking three miles to get there.
          </span>
          <RenderTextEditor
            editorIndex="After finding out about the secret spot and walking three miles to get there."
            handleChange={[Function]}
            placeholder="Type your response here"
            value=""
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth null"
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value=""
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth null"
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value=""
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
        <div
          className="list-component "
          key="Before he went home, he took photographs of all his friends and said goodbye."
        >
          <span
            className="step-label"
          >
            Before he went home, he took photographs of all his friends and said goodbye.
          </span>
          <RenderTextEditor
            editorIndex="Before he went home, he took photographs of all his friends and said goodbye."
            handleChange={[Function]}
            placeholder="Type your response here"
            value=""
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth null"
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value=""
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth null"
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value=""
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
      </div>
      <SubmitButton
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="question-button-group"
        >
          <button
            className="quill-button primary contained large focus-on-light disabled"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Submit
          </button>
        </div>
      </SubmitButton>
    </div>
  </div>
</Multistep>
`;

exports[`Multistep component student view when the student has submitted an answer and the teacher is having them retry part of it renders 1`] = `
<Multistep
  data={
    Object {
      "play": Object {
        "cues": Array [
          "",
        ],
        "instructions": "",
        "prompt": "Label each group of words as a fragment or a complete sentence.",
        "stepLabels": Array [
          "Even though he had practiced every night and he was a talented singer.",
          "After finding out about the secret spot and walking three miles to get there.",
          "Before he went home, he took photographs of all his friends and said goodbye.",
        ],
      },
      "teach": Object {
        "script": Array [
          Object {
            "data": Object {
              "body": "<p><strong>Say:</strong> CHANGE ME</p>",
              "heading": "STEP HTML HEADING",
            },
            "type": "STEP-HTML",
          },
          Object {
            "type": "T-REVIEW",
          },
        ],
        "title": "MULTISTEP SLIDE TITLE",
      },
    }
  }
  mode={null}
  selected_submission_order={null}
  selected_submissions={null}
  studentCount={2}
  submissions={
    Object {
      "student": Object {
        "data": Object {
          "1": "",
          "After finding out about the secret spot and walking three miles to get there.": "Fragment",
          "Before he went home, he took photographs of all his friends and said goodbye.": "Complete sentence",
          "Even though he had practiced every night and he was a talented singer.": "Fragment",
        },
        "timestamp": "2020-06-25T15:12:30.233Z",
      },
    }
  }
>
  <div
    className="multistep student-slide-wrapper "
  >
    <div
      className="all-but-submitted-bar"
    >
      <PromptSection
        mode={null}
        promptElement={
          <SentenceFragments
            prompt="Label each group of words as a fragment or a complete sentence."
          />
        }
      >
        <SentenceFragments
          prompt="Label each group of words as a fragment or a complete sentence."
        >
          <div
            className="draft-js sentence-fragments prevent-selection"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Label each group of words as a fragment or a complete sentence.",
              }
            }
          />
        </SentenceFragments>
      </PromptSection>
      <div
        className="list-blanks"
      >
        <div
          className="list-component first"
          key="Even though he had practiced every night and he was a talented singer."
        >
          <span
            className="step-label"
          >
            Even though he had practiced every night and he was a talented singer.
          </span>
          <RenderTextEditor
            editorIndex="Even though he had practiced every night and he was a talented singer."
            handleChange={[Function]}
            placeholder="Type your response here"
            value=""
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth null"
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value=""
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth null"
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value=""
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
        <div
          className="list-component "
          key="After finding out about the secret spot and walking three miles to get there."
        >
          <span
            className="step-label"
          >
            After finding out about the secret spot and walking three miles to get there.
          </span>
          <RenderTextEditor
            editorIndex="After finding out about the secret spot and walking three miles to get there."
            handleChange={[Function]}
            placeholder="Type your response here"
            value=""
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth null"
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value=""
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth null"
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value=""
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
        <div
          className="list-component "
          key="Before he went home, he took photographs of all his friends and said goodbye."
        >
          <span
            className="step-label"
          >
            Before he went home, he took photographs of all his friends and said goodbye.
          </span>
          <RenderTextEditor
            editorIndex="Before he went home, he took photographs of all his friends and said goodbye."
            handleChange={[Function]}
            placeholder="Type your response here"
            value=""
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth null"
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value=""
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth null"
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value=""
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
      </div>
      <SubmitButton
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="question-button-group"
        >
          <button
            className="quill-button primary contained large focus-on-light disabled"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Submit
          </button>
        </div>
      </SubmitButton>
    </div>
  </div>
</Multistep>
`;

exports[`Multistep component student view when the student has submitted an answer renders 1`] = `
<Multistep
  data={
    Object {
      "play": Object {
        "cues": Array [
          "",
        ],
        "instructions": "",
        "prompt": "Label each group of words as a fragment or a complete sentence.",
        "stepLabels": Array [
          "Even though he had practiced every night and he was a talented singer.",
          "After finding out about the secret spot and walking three miles to get there.",
          "Before he went home, he took photographs of all his friends and said goodbye.",
        ],
      },
      "teach": Object {
        "script": Array [
          Object {
            "data": Object {
              "body": "<p><strong>Say:</strong> CHANGE ME</p>",
              "heading": "STEP HTML HEADING",
            },
            "type": "STEP-HTML",
          },
          Object {
            "type": "T-REVIEW",
          },
        ],
        "title": "MULTISTEP SLIDE TITLE",
      },
    }
  }
  mode={null}
  selected_submission_order={null}
  selected_submissions={null}
  studentCount={2}
  submissions={
    Object {
      "student": Object {
        "data": Object {
          "After finding out about the secret spot and walking three miles to get there.": "Fragment",
          "Before he went home, he took photographs of all his friends and said goodbye.": "Complete sentence",
          "Even though he had practiced every night and he was a talented singer.": "Fragment",
        },
        "timestamp": "2020-06-25T15:12:30.233Z",
      },
    }
  }
>
  <div
    className="multistep student-slide-wrapper "
  >
    <div
      className="all-but-submitted-bar"
    >
      <PromptSection
        mode={null}
        promptElement={
          <SentenceFragments
            prompt="Label each group of words as a fragment or a complete sentence."
          />
        }
      >
        <SentenceFragments
          prompt="Label each group of words as a fragment or a complete sentence."
        >
          <div
            className="draft-js sentence-fragments prevent-selection"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Label each group of words as a fragment or a complete sentence.",
              }
            }
          />
        </SentenceFragments>
      </PromptSection>
      <div
        className="list-blanks"
      >
        <div
          className="list-component first"
          key="Even though he had practiced every night and he was a talented singer."
        >
          <span
            className="step-label"
          >
            Even though he had practiced every night and he was a talented singer.
          </span>
          <RenderTextEditor
            editorIndex="Even though he had practiced every night and he was a talented singer."
            handleChange={[Function]}
            placeholder="Type your response here"
            value=""
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth null"
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value=""
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth null"
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value=""
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
        <div
          className="list-component "
          key="After finding out about the secret spot and walking three miles to get there."
        >
          <span
            className="step-label"
          >
            After finding out about the secret spot and walking three miles to get there.
          </span>
          <RenderTextEditor
            editorIndex="After finding out about the secret spot and walking three miles to get there."
            handleChange={[Function]}
            placeholder="Type your response here"
            value=""
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth null"
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value=""
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth null"
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value=""
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
        <div
          className="list-component "
          key="Before he went home, he took photographs of all his friends and said goodbye."
        >
          <span
            className="step-label"
          >
            Before he went home, he took photographs of all his friends and said goodbye.
          </span>
          <RenderTextEditor
            editorIndex="Before he went home, he took photographs of all his friends and said goodbye."
            handleChange={[Function]}
            placeholder="Type your response here"
            value=""
          >
            <TextareaAutosize
              autoCapitalize="off"
              autoCorrect="off"
              className="student text-editor card is-fullwidth null"
              onChange={[Function]}
              onHeightChange={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              placeholder="Type your response here"
              spellCheck={false}
              useCacheForDOMMeasurements={false}
              value=""
            >
              <textarea
                autoCapitalize="off"
                autoCorrect="off"
                className="student text-editor card is-fullwidth null"
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Type your response here"
                spellCheck={false}
                style={
                  Object {
                    "height": 0,
                  }
                }
                value=""
              />
            </TextareaAutosize>
          </RenderTextEditor>
        </div>
      </div>
      <SubmitButton
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="question-button-group"
        >
          <button
            className="quill-button primary contained large focus-on-light disabled"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Submit
          </button>
        </div>
      </SubmitButton>
    </div>
  </div>
</Multistep>
`;
